SERVER-11433: group a non-existant collection should not be an error